--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -100,10 +100,13 @@
           <item row="1" column="1" colspan="2">
            <widget class="QSlider" name="slider_2">
             <property name="minimum">
-             <number>2</number>
+             <number>20</number>
             </property>
             <property name="maximum">
-             <number>100</number>
+             <number>1000</number>
+            </property>
+            <property name="value">
+             <number>200</number>
             </property>
             <property name="orientation">
              <enum>Qt::Horizontal</enum>
